2001-07-15  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* exult.cc: palette-cycle 244-247 too

2001-07-15  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.cc: read() now calls setup_game(), removing some
	duplicated code.
	* EStudio: Show 'face' and allow setting by dropping from
	shape-browser.
	* EStudio: Stop time when map-editing.
	* Added "Play/test" toggle button to main EStudio window.

2001-07-14  Jeff Freedman  <jeff@amy.nerble.net>

	* Name changes:  Chunk_object_list -> Map_chunk.
	gwin->get_objects() -> gwin->get_chunk().

2001-07-13  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* egg.cc: #include cheat.h not only for XWIN
	* font.cc: check for NULL shape in get_text_width()
	* objs.cc: more SI object names

2001-07-13  Jeff Freedman  <jeff@amy.nerble.net>

	* actorio.cc:  Save/restore face_num.

2001-07-12  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Paperdoll_gump_info.cc: fixed Gwani cloak bug
	* mapedit/Makefile.am: possible fix for slighty incompatible 'make'

2001-07-12  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc, actors.cc: Start schedule even if NPC is not within
	world.  Fixes SI Moonshade-kidnap bug.
	
	* Exult Studio now has a 'save map' option.  Files are stored in
	the <PATCH> directory (specified in 'exult.cfg'.

2001-07-11  Max Horn <max@quendi.de>
	* data/quotes.txt: new quote ;)
	* various files: removed the emacs header that force the fundamental mode to be used
	
2001-07-11  Ryan Nunn <triforce@merlin.net.au>
	* objs/chunks.cc : Added shapes 394 and 941 as mountain types for
	  dungeon checking in Serpent Isle. Removed the per Superchuck dungeon
	  hack for Knights Test and Silver Seed quest. This should fix all the
	  dungeon rendering errors in SI.

2001-07-11  Tristan Tarrant <nadir@users.sourceforge.net>
	* mapedit/Makefile.am: add stuff needed for exult_studio.glade. It is
	  now installed in the right place and included in the dist.

2001-07-11  Jeff Freedman  <jeff@amy.nerble.net>